# Copyright 2016, alex at staticlibs.net
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required ( VERSION 2.8.12 )

# dependencies
if ( NOT DEFINED WILTON_DEPS_DIRECTORY )
    set ( WILTON_DEPS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/../.. )
endif ( )
# toolchain setup
set ( STATICLIB_TOOLCHAIN linux_amd64_gcc CACHE STRING "toolchain triplet" )
if ( NOT DEFINED STATICLIB_CMAKE )
    set ( STATICLIB_CMAKE ${CMAKE_CURRENT_LIST_DIR}/../../cmake CACHE INTERNAL "" )    
endif ( )
set ( CMAKE_TOOLCHAIN_FILE ${STATICLIB_CMAKE}/toolchains/${STATICLIB_TOOLCHAIN}.cmake CACHE INTERNAL "" )

# project
project ( wilton_jni CXX )
set ( ${PROJECT_NAME}_STATICLIB_VERSION 1.0 )
set ( ${PROJECT_NAME}_DESCRIPTION "Wilton Web Toolkit JNI library" )
set ( ${PROJECT_NAME}_URL https://github.com/wilton-web-toolkit/wilton-jni )
include ( ${STATICLIB_CMAKE}/staticlibs_common.cmake )
staticlib_enable_deplibs_cache ( )

staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_jni )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_config )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_io )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_ranges )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_httpserver )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_utils )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/staticlib_serialization )
staticlib_add_subdirectory ( ${WILTON_DEPS_DIRECTORY}/wilton_c )

# dependencies
set ( ${PROJECT_NAME}_DEPS_PUBLIC
        staticlib_jni
        staticlib_config
        wilton_c )
staticlib_pkg_check_modules ( ${PROJECT_NAME}_DEPS_PUBLIC_PC REQUIRED ${PROJECT_NAME}_DEPS_PUBLIC )
set ( ${PROJECT_NAME}_DEPS_PRIVATE
        jansson
        staticlib_io
        staticlib_ranges
        staticlib_httpserver
        staticlib_utils
        staticlib_serialization )
staticlib_pkg_check_modules ( ${PROJECT_NAME}_DEPS_PRIVATE_PC REQUIRED ${PROJECT_NAME}_DEPS_PRIVATE )

# build steps
add_library ( ${PROJECT_NAME} SHARED ${CMAKE_CURRENT_LIST_DIR}/wilton_jni.cpp )
target_include_directories ( ${PROJECT_NAME} BEFORE PRIVATE ${${PROJECT_NAME}_DEPS_PUBLIC_PC_INCLUDE_DIRS} )
target_compile_options ( ${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_DEPS_PUBLIC_PC_CFLAGS_OTHER} )
target_link_libraries ( ${PROJECT_NAME} 
        ${${PROJECT_NAME}_DEPS_PUBLIC_PC_LIBRARIES}
        ${${PROJECT_NAME}_DEPS_PRIVATE_PC_LIBRARIES} )
